<resources>
    <string name="app_name">Istoria alfabetelor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scriptorium</string>
    <string name="nav_header_subtitle">Learn the history of the alphabets</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_trivia">Trivia</string>
    <string name="menu_about">About</string>
    <string name="fab_description">Button</string>
    <string name="menu_alphabets">Alphabets</string>
    <string name="menu_number_converter">Number converter</string>
    <string name="trivia_scores">Trivia scores</string>
    <string name="take_the_quiz">Take the quiz</string>
    <string name="trivia">Trivia</string>
    <string name="trivia_q1">1. Care este cel mai vechi sistem de scriere cunoscut?</string>
    <string name="alfabetul_fenician">Alfabetul fenician</string>
    <string name="scrierea_cuneiforma">Scrierea cuneiforma</string>
    <string name="hieroglifa_egipteana">Hieroglifa egipteana</string>
    <string name="alfabetul_grec">Alfabetul grec</string>
    <string name="trivia_q2">2. Ce civilizatie a folosit hieroglifele ca sistem de scriere?</string>
    <string name="egiptul_antic">Egiptul antic</string>
    <string name="civilizatia_minoica">Civilizatia minoica</string>
    <string name="mesopotamia">Mesopotamia</string>
    <string name="imperiul_roman">Imperiul roman</string>
    <string name="trivia_q3">3. In ce regiune a fost utilizat alfabetul runic?</string>
    <string name="answer_here">Answer here:</string>
    <string name="trivia_q4">4. Care alfabet este considerat stramosul direct al majoritatii alfabetelor moderne?</string>
    <string name="trivia_q5">5. Cine este creditat pentru inventarea alfabetului glagolitic?</string>
    <string name="aristotel">Aristotel</string>
    <string name="constantin">Constantin</string>
    <string name="socrate">Socrate</string>
    <string name="herodot">Herodot</string>
    <string name="trivia_q6">6. Cate litere are alfabetul latin modern?</string>
    <string name="trivia_q7">7. In ce an a fost descifrata scrierea cuneiforma?</string>
    <string name="_1799">1799</string>
    <string name="_1857">1857</string>
    <string name="_1822">1822</string>
    <string name="_1895">1895</string>
    <string name="trivia_q8">8. Cate categorii principale de simboluri exista in scrierea cuneiforma?</string>
    <string-array name="simboluri">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="trivia_q9">9. In ce regiune a fost folosit alfabetul oghamic?</string>
    <string name="trivia_q10">10. Din ce sistem de scriere deriva alfabetul latin?</string>
    <string name="bttn_send">Send</string>
    <string name="toast_q1">Trebuie sa selectezi un raspuns pentru intrebarea 1!</string>
    <string name="toast_q2">Trebuie sa selectezi un raspuns pentru intrebarea 2!</string>
    <string name="toast_q5">Trebuie sa selectezi un raspuns pentru intrebarea 5!</string>
    <string name="toast_q7">Trebuie sa selectezi un raspuns pentru intrebarea 7!</string>
    <string name="toast_q3">Raspunsul intrebarii 3 nu este valid!</string>
    <string name="toast_q4">Raspunsul intrebarii 4 nu este valid!</string>
    <string name="toast_q6">Trebuie sa introduci un numar in casuta intrebarii cu numarul 6!</string>
    <string name="toast_q9">Raspunsul intrebarii 9 nu este valid!</string>
    <string name="toast_q10">Raspunsul intrebarii 10 nu este valid!</string>
    <string name="trivia_name">Istoria alfabetelor</string>
    <string name="score_shower1">"Ai obtinut "</string>
    <string name="score_shower2">" de puncte. Felicitari!"</string>
    <string name="score_shower3">" de puncte. Mai incearca!"</string>
    <string name="about_welcome">Bine ai venit!</string>
    <string name="about_appPurpose">„Istoria Alfabetelor” este o aplicatie educativa dedicata explorarii fascinantei evolutii a alfabetelor lumii. De la primele simboluri folosite in antichitate pana la alfabetele moderne, aplicatia iti ofera o calatorie interactiva prin istorie, descoperind originile si schimbarile literelor care formeaza limbile noastre. Fie ca esti pasionat de lingvistica, istorie sau pur si simplu vrei sa inveti ceva nou, aplicatia te va ghida printr-o serie de informatii interesante, curiozitati si activitati interactive, oferindu-ti o perspectiva unica asupra evolutiei alfabetelor. Explorati, învatati si distrati-va cu „Istoria Alfabetelor” – acoperind vechi civilizatii si contributiile lor la dezvoltarea limbii scrise!</string>
    <string name="alphabets_scriereaCuneiforma">\t\tScrierea cuneiforma este considerata cel mai vechi sistem de scriere cunoscut, datand din jurul anului 3400 i.Hr. Acesta a fost folosit de civilizatiile din Mesopotamia, fiind un sistem bazat pe pictograme si simboluri fonetice. Spre deosebire de alte forme de scriere, cum sunt hieroglifele egiptene, cuneiformul se distinge prin utilizarea unui stilou pentru a imprima semnele pe tablitele de lut. Scrierea cuneiforma se bazeaza pe trei tipuri principale de simboluri: pictograme, semne fonetice si ideograme. Acestea erau folosite pentru a reprezenta idei, sunete si obiecte, formand un sistem complex de comunicare. Aceasta a fost descifrată in anul 1857 de cercetatorul britanic Henry Rawlinson, care a reusit sa identifice semnificatia unui numar mare de semne cuneiforme. Aceasta a deschis drumul pentru intelegerea limbii si culturii mesopotamiene.</string>
    <string name="alphabets_titlu1">Scrierea cuneiforma</string>
    <string name="tablita_scriere_cuneiforma">Tablita scriere cuneiforma</string>
    <string name="alphabets_hieroglifeEgiptAntic">Hieroglifele Egiptului Antic</string>
    <string name="alphabets_hieroglife">\t\tCivilizatia egipteana este cunoscuta pentru utilizarea hieroglifelor ca sistem de scriere. Aceste semne reprezentau obiecte sau idei si erau folosite in principal pentru a inregistra istoria, religia si viata cotidiana a egiptenilor. Hieroglifele au fost utilizate pentru mii de ani, fiind un simbol al rafinamentului cultural al Egiptului Antic.</string>
    <string name="tablita_hieroglife">Tablita hieroglife</string>
    <string name="alphabets_latin">\t\tAlfabetul latin modern isi are radacinile in alfabetul etrusc, care, la randul sau, a fost influentat de alfabetul grec. Alfabetul latin s-a raspandit rapid in Imperiul Roman si este acum folosit la scara larga in intreaga lume, fiind baza pentru majoritatea alfabetelor moderne. Alfabetul latin modern este format din 26 de litere, fiind utilizat in limbile majoritatii tarilor din lume. Aceasta este o modificare a alfabetului latin clasic, care continea doar 23 de litere. Iata si o lista cu cifrele romane: I = 1, V = 5, X = 10, L = 50, C = 100, D = 500, M = 1000. Când o cifră mai mică este plasată după una mai mare, se adaugă. Exemplu: VI = 5 + 1 = 6. Când o cifră mai mică este plasată înaintea uneia mai mari, se scade.
Exemplu: IV = 5 - 1 = 4. Aceeași cifră romană poate fi repetată de până la 3 ori pentru a adăuga valoare. Exemplu: III = 1 + 1 + 1 = 3.</string>
    <string name="alphabets_alfabetulLatin">Alfabetul latin</string>
    <string name="tablita_alfabet_latin">Tablita alfabet latin</string>
    <string name="alphabets_alfabetulFenician">Alfabetul fenician</string>
    <string name="alphabets_fenician">\t\tAlfabetul fenician este considerat stramosul direct al majoritatii alfabetelor moderne. Acesta a fost inventat de fenicieni in jurul anului 1200 i.Hr. si a fost un sistem fonetic simplificat, care a influentat atat alfabetul grec, cat si alte sisteme de scriere din regiune.</string>
    <string name="tablita_alfabet_fenician">Tablita alfabet fenician</string>
    <string name="alphabets_alfabetulRunic">Alfabetul runic</string>
    <string name="alphabets_runic">\t\tAlfabetul runic a fost utilizat in Scandinavia incepand cu secolul II d.Hr. Runele aveau o forma distincta si erau folosite pentru a inscripționa pietre si obiecte de cult sau in scopuri magice si religioase.</string>
    <string name="tablita_alfabet_runic">Tablita alfabet runic</string>
    <string name="alphabets_alfabetulGlagolitic">Alfabetul glagolitic</string>
    <string name="alphabets_glagolitic">\t\tAlfabetul glagolitic, un sistem de scriere folosit pentru a transcrie limba slava veche, a fost inventat de Constantin (Sfantul Chiril) in secolul IX. Acesta a jucat un rol esential in raspandirea crestinismului in randul slavilor.</string>
    <string name="tablita_alfabet_glagolitic">Tablita alfabet glagolitic</string>
    <string name="alphabets_alfabetulOghamic">Alfabetul oghamic</string>
    <string name="alphabets_oghamic">\t\tAlfabetul oghamic este un sistem de scriere folosit in Irlanda si in zonele din jurul acesteia, incepand din jurul secolului IV d.Hr. Acesta a fost folosit pentru inscriptii pe pietre si a avut un rol important in cultura celtica.</string>
    <string name="tablita_alfabet_oghamic">Tablita alfabet oghamic</string>
    <string name="introdu_un_raspuns">Introdu un raspuns!</string>
    <string name="corect">Corect!</string>
    <string name="incorect_raspunsul_corect_este">"Incorect! Raspunsul corect este "</string>
    <string name="introdu_cifre_romane">"Introdu in casuta de mai jos numarul dat, scris in cifre romane: "</string>
    <string name="introdu_cifre_arabe">"Introdu in casuta de mai jos numarul dat, scris in cifre arabe: "</string>
    <string name="scores">Take trivia</string>
    <string name="question">Question</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="submit">Submit</string>
    <string name="next_question">Next</string>
    <string name="trivia_menu">Trivia menu</string>
    <string name="buton_trivia">Buton trivia</string>
</resources>