<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/bej_pergament">

    <TextView
        android:id="@+id/surugiu_george_alexandru_questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/question"
        android:textColor="@color/rosu_inchis"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surugiu_george_alexandru_answerInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_answer"
        android:textColorHint="@color/cenusiu"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/purple_500"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surugiu_george_alexandru_answerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/cenusiu"
            android:textStyle="italic"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/surugiu_george_alexandru_submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/rosu_inchis"
        android:textColor="@color/bej_pergament"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/surugiu_george_alexandru_nextQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:backgroundTint="@color/rosu_inchis"
        android:textColor="@color/bej_pergament"
        android:layout_marginTop="8dp" />
</LinearLayout>
